--- a/package.json
+++ b/package.json
@@ -3,20 +3,32 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://rikesh7.github.io/Nepal-Digital-System",
   "scripts": {
-    "dev": "vite",
+    "deploy": "vite build && gh-pages -d dist",
+    "production": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.22.3",
     "universal-cookie": "^7.1.0"
   },
@@ -28,6 +40,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "vite": "^5.1.6"
   }
 }
