--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,9 @@ jobs:
           node-version: 18
           cache: 'npm'
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install -g gh-pages
       - name: Build and Deploy
         run: |
           npm run build
