--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,10 @@ jobs:
         run: |
           npm install
           npm install -g gh-pages
+      - name: User Identity Verification
+        run: |
+          git config user.email "acharyarikesh7@gmail.com"
+          git config user.name "rikesh7"
       - name: Build and Deploy
         run: |
           npm run build
