--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,18 +9,6 @@ on:
       - 'main'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
   # Single deploy job since we're just deploying
   deploy:
@@ -31,8 +19,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_TOKEN }}
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
@@ -42,15 +28,12 @@ jobs:
         run: |
           npm install
           npm install -g gh-pages
-      - name: User Identity Verification
-        run: |
-          git config user.email "acharyarikesh7@gmail.com"
-          git config user.name "rikesh7"
       - name: Build and Deploy
         run: |
           npm run build
           echo "Build completed!"
-          # Deploy the build artifacts (e.g., index.html) to GitHub Pages
-          # Adjust the path to your build output directory
           which gh-pages
           gh-pages -d dist
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          # token: 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
