--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,14 +30,14 @@ jobs:
           npm install -g gh-pages
       - name: Configure Git user
         run: |
-          git config --global user.email "acharyarikesh7@gmail.com"
-          git config --global user.name "rikesh7"
+          git config --global user.email "nabindangi32@gmail.com"
+          git config --global user.name "Nabin-Flash320"
       - name: Build and Deploy
         run: |
           npm run build
           echo "Build completed!"
           which gh-pages
           gh-pages -d dist
-          with:
-            token: ${{ secrets.GH_TOKEN }}
+          # with:
+          #   token: ${{ secrets.GH_TOKEN }}
           # token: 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
