--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,12 @@ jobs:
         run: |
           git config --global user.email "acharyarikesh7@gmail.com"
           git config --global user.name "rikesh7"
-      - name: Build and Deploy
+      - name: Build
         run: |
           npm run build
           echo "Build completed!"
+      - name: Deploy
+        run: |
           which gh-pages
           gh-pages -d dist
           with:
