--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
         run: |
           npm install
           npm install -g gh-pages
-      - name: Configure Git user
-        run: |
-          git config --global user.email "acharyarikesh7@gmail.com"
-          git config --global user.name "rikesh7"
+      # - name: Configure Git user
+      #   run: |
+      #     git config --global user.email "acharyarikesh7@gmail.com"
+      #     git config --global user.name "rikesh7"
       - name: Build
         run: |
           npm run build
