--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "node": "^20.13.1",
     "owl.carousel": "^2.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
